# robotCtrl

./: README.md
botgaze/: CMakeLists.txt  control.yaml  package.xml
botgaze/launch/: floor.launch  floor.rviz  floor_rviz.launch
botgaze/urdf/: bot.urdf
botgaze/worlds/: floor.world
navmap/: CMakeLists.txt  package.xml
navmap/config/: gmapping.yaml
navmap/launch/: floor_gmap.rviz  navmap.launch
operate/: CMakeLists.txt  package.xml
operate/src/: keyboard.cpp  operate (사본).cpp  operate.cpp
patrol/scripts/: patrol.py  patrol_2.py  patrol_origin.py
track/: CMakeLists.txt  package.xml
track/launch/: amcl.launch  move.launch  track.launch  track.rviz
track/param/: costmap_common.yaml  dwa_local_planner.yaml  local_costmap.yaml
