<package>
  <name>botgaze</name>
  <version>0.1.0</version>
  <description>The botgaze package</description>
  <maintainer email="chocomint@todo.todo">chocomint</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>botctl</run_depend>
  <run_depend>bot</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>  
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
