<?xml version="1.0"?>
<package format="2">
  <name>track</name>
  <version>0.0.0</version>
  <description>The track package</description>
  <maintainer email="mint@todo.todo">mint</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <export></export>
</package>
